; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_msg.c_test_nullCallback.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_msg.c_test_nullCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"TestWindowClass\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"Test overlapped\00", align 1
@WS_OVERLAPPEDWINDOW = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [36 x i8] c"Failed to create overlapped window\0A\00", align 1
@WM_NULL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_nullCallback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_nullCallback() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @WS_OVERLAPPEDWINDOW, align 4
  %3 = call i64 @CreateWindowExA(i32 0, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %2, i32 100, i32 100, i32 200, i32 200, i32 0, i32 0, i32 0, i32* null)
  store i64 %3, i64* %1, align 8
  %4 = load i64, i64* %1, align 8
  %5 = icmp ne i64 %4, 0
  %6 = zext i1 %5 to i32
  %7 = call i32 @ok(i32 %6, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0))
  %8 = load i64, i64* %1, align 8
  %9 = load i32, i32* @WM_NULL, align 4
  %10 = call i32 @SendMessageCallbackA(i64 %8, i32 %9, i32 0, i32 0, i32* null, i32 0)
  %11 = call i32 (...) @flush_events()
  %12 = load i64, i64* %1, align 8
  %13 = call i32 @DestroyWindow(i64 %12)
  ret void
}

declare dso_local i64 @CreateWindowExA(i32, i8*, i8*, i32, i32, i32, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @ok(i32, i8*) #1

declare dso_local i32 @SendMessageCallbackA(i64, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @flush_events(...) #1

declare dso_local i32 @DestroyWindow(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
